localize contact refresh page strings

--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Променете избраната двойка",
   "change_wallet_alert_content": "Искате ли да смените сегашния портфейл на ${wallet_name}?",
   "change_wallet_alert_title": "Смяна на сегашния портфейл",
+  "checking_for_alias_changes": "Проверка за промени в псевдонима",
   "choose_a_payment_method": "Изберете начин на плащане",
   "choose_a_provider": "Изберете доставчик",
   "choose_account": "Избиране на профил",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Моите портфейли",
   "contact_name": "Име на контакт",
   "contact_name_exists": "Вече съществува контакт с това име. Моля, изберете друго име.",
+  "contact_no_longer_has_an_address_assigne": "Този контакт вече няма назначен адрес. Моля, изберете различен контакт или въведете адрес ръчно.",
   "contact_support": "Свържи се с отдел поддръжка",
   "continue_text": "Напред",
   "contract_address": "Адрес на договора",
