--- a/res/values/strings_es.arb
+++ b/res/values/strings_es.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Cambiar el par seleccionado",
   "change_wallet_alert_content": "¿Quieres cambiar la billetera actual a ${wallet_name}?",
   "change_wallet_alert_title": "Cambiar billetera actual",
+  "checking_for_alias_changes": "Verificar los cambios de alias",
   "choose_a_payment_method": "Elija un método de pago",
   "choose_a_provider": "Elija un proveedor",
   "choose_account": "Elegir cuenta",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Mis billeteras",
   "contact_name": "Nombre de contacto",
   "contact_name_exists": "Ya existe un contacto con ese nombre. Elija un nombre diferente.",
+  "contact_no_longer_has_an_address_assigne": "Este contacto ya no tiene una dirección asignada. Seleccione un contacto diferente o ingrese una dirección manualmente.",
   "contact_support": "Contactar con Soporte",
   "continue_text": "Continuar",
   "contract_address": "Dirección de contrato",
