--- a/res/values/strings_fr.arb
+++ b/res/values/strings_fr.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Modifier la paire sélectionnée",
   "change_wallet_alert_content": "Souhaitez-vous changer le portefeuille (wallet) actuel vers ${wallet_name} ?",
   "change_wallet_alert_title": "Changer le portefeuille (wallet) actuel",
+  "checking_for_alias_changes": "Vérification des modifications d'alias",
   "choose_a_payment_method": "Choisissez un mode de paiement",
   "choose_a_provider": "Choisissez un fournisseur",
   "choose_account": "Choisir le compte",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Mes portefeuilles (wallets)",
   "contact_name": "Nom de Contact",
   "contact_name_exists": "Un contact portant ce nom existe déjà. Veuillez choisir un autre nom.",
+  "contact_no_longer_has_an_address_assigne": "Ce contact n'a plus d'adresse attribuée. Veuillez sélectionner un autre contact ou entrer une adresse manuellement.",
   "contact_support": "Contacter l'assistance",
   "continue_text": "Continuer",
   "contract_address": "Adresse du contrat",
