--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "चयनित जोड़ी बदलें",
   "change_wallet_alert_content": "क्या आप करंट वॉलेट को बदलना चाहते हैं ${wallet_name}?",
   "change_wallet_alert_title": "वर्तमान बटुआ बदलें",
+  "checking_for_alias_changes": "उपनाम परिवर्तनों के लिए जाँच",
   "choose_a_payment_method": "एक भुगतान विधि का चयन करें",
   "choose_a_provider": "एक प्रदाता चुनें",
   "choose_account": "खाता चुनें",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "मेरा बटुआ",
   "contact_name": "संपर्क नाम",
   "contact_name_exists": "उस नाम का एक संपर्क पहले से मौजूद है. कृपया कोई भिन्न नाम चुनें.",
+  "contact_no_longer_has_an_address_assigne": "इस संपर्क में अब कोई पता नहीं है। कृपया एक अलग संपर्क चुनें या मैन्युअल रूप से कोई पता दर्ज करें।",
   "contact_support": "सहायता से संपर्क करें",
   "continue_text": "जारी रहना",
   "contract_address": "संविदा पता",
