--- a/res/values/strings_hr.arb
+++ b/res/values/strings_hr.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Promijenite odabrani par",
   "change_wallet_alert_content": "Želite li promijeniti trenutni novčanik u ${wallet_name}?",
   "change_wallet_alert_title": "Izmijeni trenutni novčanik",
+  "checking_for_alias_changes": "Provjera promjena aliasa",
   "choose_a_payment_method": "Odaberite način plaćanja",
   "choose_a_provider": "Odaberite davatelja usluga",
   "choose_account": "Odaberi račun",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Moji novčanici",
   "contact_name": "Ime kontakta",
   "contact_name_exists": "Kontakt s tim imenom već postoji. Odaberite drugo ime.",
+  "contact_no_longer_has_an_address_assigne": "Ovaj kontakt više nema dodijeljenu adresu. Odaberite drugi kontakt ili ručno unesite adresu.",
   "contact_support": "Kontaktirajte podršku",
   "continue_text": "Nastavak",
   "contract_address": "Adresa ugovora",
