--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Փոխեք ընտրված զույգը",
   "change_wallet_alert_content": "Ցանկանում եք փոխել ընթացիկ դրամապանակը ${wallet_name}?",
   "change_wallet_alert_title": "Փոխել ընթացիկ դրամապանակը",
+  "checking_for_alias_changes": "Alias- ի փոփոխությունների ստուգում",
   "choose_a_payment_method": "Ընտրեք վճարման եղանակ",
   "choose_a_provider": "Ընտրեք մատակարար",
   "choose_account": "Ընտրեք հաշիվը",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Իմ դրամապանակներ",
   "contact_name": "Կոնտակտի անուն",
   "contact_name_exists": "Այդ անվանման հետ կապ կա արդեն: Խնդրում ենք ընտրել այլ անուն:",
+  "contact_no_longer_has_an_address_assigne": "Այս կապն այլեւս նշանակված հասցե չունի: Խնդրում ենք ընտրել այլ կոնտակտ կամ ձեռքով մուտքագրել հասցե:",
   "contact_support": "Հետադարձ կապ",
   "continue_text": "Շարունակել",
   "contract_address": "Պայմանագրի հասցե",
