--- a/res/values/strings_ja.arb
+++ b/res/values/strings_ja.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "選択したペアを変更します",
   "change_wallet_alert_content": "現在のウォレットをに変更しますか ${wallet_name}?",
   "change_wallet_alert_title": "現在のウォレットを変更する",
+  "checking_for_alias_changes": "エイリアスの変更のチェック",
   "choose_a_payment_method": "支払い方法を選択します",
   "choose_a_provider": "プロバイダーを選択します",
   "choose_account": "アカウントを選択",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "マイウォレット",
   "contact_name": "連絡先",
   "contact_name_exists": "その名前の連絡先はすでに存在します。別の名前を選択してください。",
+  "contact_no_longer_has_an_address_assigne": "この連絡先には、アドレスが割り当てられなくなりました。別の連絡先を選択するか、アドレスを手動で入力してください。",
   "contact_support": "サポートに連絡する",
   "continue_text": "持続する",
   "contract_address": "契約アドレス",
