--- a/res/values/strings_nl.arb
+++ b/res/values/strings_nl.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Wijzig geselecteerd paar",
   "change_wallet_alert_content": "Wilt u de huidige portemonnee wijzigen in ${wallet_name}?",
   "change_wallet_alert_title": "Wijzig huidige portemonnee",
+  "checking_for_alias_changes": "Controleren op aliaswijzigingen",
   "choose_a_payment_method": "Kies een betaalmethode",
   "choose_a_provider": "Kies een provider",
   "choose_account": "Kies account",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Mijn portefeuilles",
   "contact_name": "Contactnaam",
   "contact_name_exists": "Er bestaat al een contact met die naam. Kies een andere naam.",
+  "contact_no_longer_has_an_address_assigne": "Deze contactpersoon heeft niet langer een adres toegewezen. Selecteer een ander contact of voer handmatig een adres in.",
   "contact_support": "Contact opnemen met ondersteuning",
   "continue_text": "Doorgaan met",
   "contract_address": "Contractadres",
