--- a/res/values/strings_pl.arb
+++ b/res/values/strings_pl.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Zmień wybraną parę",
   "change_wallet_alert_content": "Czy chcesz zmienić obecny portfel na ${wallet_name}?",
   "change_wallet_alert_title": "Zmień obecny portfel",
+  "checking_for_alias_changes": "Sprawdzanie zmian aliasów",
   "choose_a_payment_method": "Wybierz metodę płatności",
   "choose_a_provider": "Wybierz dostawcę",
   "choose_account": "Wybierz konto",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "Moje portfele",
   "contact_name": "Nazwa Kontaktu",
   "contact_name_exists": "Kontakt o tej nazwie już istnieje. Proszę wybrać inną nazwę.",
+  "contact_no_longer_has_an_address_assigne": "Ten kontakt nie ma już przypisanego adresu. Wybierz inny kontakt lub wprowadź adres ręcznie.",
   "contact_support": "Skontaktuj się z pomocą techniczną",
   "continue_text": "Dalej",
   "contract_address": "Adres kontraktu",
