--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Baguhin ang napiling pares",
   "change_wallet_alert_content": "Gusto mo bang palitan ang kasalukuyang wallet sa ${wallet_name}?",
   "change_wallet_alert_title": "Baguhin ang kasalukuyang wallet",
+  "checking_for_alias_changes": "Sinusuri ang mga pagbabago sa alias",
   "choose_a_payment_method": "Pumili ng isang paraan ng pagbabayad",
   "choose_a_provider": "Pumili ng isang provider",
   "choose_account": "Pumili ng account",
@@ -197,10 +198,12 @@
   "connection_sync": "Koneksyon at pag-sync",
   "connectWalletPrompt": "Ikonekta ang iyong wallet sa WalletConnect upang gumawa ng mga transaksyon",
   "contact": "Contact",
+  "contact no longer has an address assigne": "Ang contact na ito ay wala nang isang address na itinalaga. Mangyaring pumili ng ibang contact o mano -mano ang isang address. (Pera :)",
   "contact_list_contacts": "Mga Contact",
   "contact_list_wallets": "Mga Wallet Ko",
   "contact_name": "Pangalan ng Contact",
   "contact_name_exists": "Ang isang pakikipag -ugnay sa pangalang iyon ay mayroon na. Mangyaring pumili ng ibang pangalan.",
+  "contact_no_longer_has_an_address_assigne": "Ang contact na ito ay wala nang isang address na itinalaga. Mangyaring pumili ng ibang contact o mano -mano ang isang address.",
   "contact_support": "Makipag-ugnay sa Suporta",
   "continue_text": "Magpatuloy",
   "contract_address": "Address ng Kontrata",
