--- a/res/values/strings_tr.arb
+++ b/res/values/strings_tr.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Seçilen çifti değiştir",
   "change_wallet_alert_content": "Şimdiki cüzdanı ${wallet_name} cüzdanı ile değiştirmek istediğinden emin misin?",
   "change_wallet_alert_title": "Şimdiki cüzdanı değiştir",
+  "checking_for_alias_changes": "Takma ad değişikliklerini kontrol etmek",
   "choose_a_payment_method": "Bir Ödeme Yöntemi Seçin",
   "choose_a_provider": "Bir Sağlayıcı Seçin",
   "choose_account": "Hesabı seç",
@@ -197,10 +198,12 @@
   "connection_sync": "Bağlantı ve senkronizasyon",
   "connectWalletPrompt": "İşlem yapmak için cüzdanınızı WalletConnect'e bağlayın",
   "contact": "Rehber",
+  "contact no longer has an address assigne": "Bu kişinin artık bir adres ataması yok. Lütfen farklı bir kişi seçin veya manuel olarak bir adres girin. (Para birimi: )",
   "contact_list_contacts": "Rehberim",
   "contact_list_wallets": "Cüzdanlarım",
   "contact_name": "Kişi ismi",
   "contact_name_exists": "Bu isimde bir kişi zaten mevcut. Lütfen farklı bir ad seçin.",
+  "contact_no_longer_has_an_address_assigne": "Bu kişinin artık bir adres ataması yok. Lütfen farklı bir kişi seçin veya manuel olarak bir adres girin.",
   "contact_support": "Destek ile İletişime Geç",
   "continue_text": "Devam et",
   "contract_address": "Sözleşme adresi",
