--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "منتخب کردہ جوڑی کو تبدیل کریں",
   "change_wallet_alert_content": "کیا آپ موجودہ والیٹ کو ${wallet_name} میں تبدیل کرنا چاہتے ہیں؟",
   "change_wallet_alert_title": "موجودہ پرس تبدیل کریں۔",
+  "checking_for_alias_changes": "عرف تبدیلیوں کی جانچ پڑتال",
   "choose_a_payment_method": "ادائیگی کا طریقہ منتخب کریں",
   "choose_a_provider": "فراہم کنندہ کا انتخاب کریں",
   "choose_account": "اکاؤنٹ کا انتخاب کریں۔",
@@ -197,10 +198,12 @@
   "connection_sync": "کنکشن اور مطابقت پذیری",
   "connectWalletPrompt": "۔ﮟﯾﮌﻮﺟ ﮫﺗﺎﺳ ﮯﮐ WalletConnect ﻮﮐ ﮮﻮﭩﺑ ﮯﻨﭘﺍ ﮯﯿﻟ ﮯﮐ ﮯﻧﺮﮐ ﻦﯾﺩ ﻦﯿﻟ",
   "contact": "رابطہ کریں۔",
+  "contact no longer has an address assigne": "اس رابطے میں اب کوئی پتہ تفویض نہیں ہے۔ براہ کرم ایک مختلف رابطہ منتخب کریں یا دستی طور پر ایڈریس درج کریں۔ (کرنسی :)",
   "contact_list_contacts": "رابطے",
   "contact_list_wallets": "میرے بٹوے",
   "contact_name": "رابطے کا نام",
   "contact_name_exists": " ۔ﮟﯾﺮﮐ ﺐﺨﺘﻨﻣ ﻡﺎﻧ ﻒﻠﺘﺨﻣ ﮏﯾﺍ ﻡﺮﮐ ﮦﺍﺮﺑ ۔ﮯﮨ ﺩﻮﺟﻮﻣ ﮯﺳ ﮯﻠﮩﭘ ﮧﻄﺑﺍﺭ ﮏﯾﺍ ﮫﺗﺎﺳ ﮯﮐ ﻡﺎﻧ ﺱﺍ",
+  "contact_no_longer_has_an_address_assigne": "اس رابطے میں اب کوئی پتہ تفویض نہیں ہے۔ براہ کرم ایک مختلف رابطہ منتخب کریں یا دستی طور پر ایڈریس درج کریں۔",
   "contact_support": "سپورٹ سے رابطہ کریں۔",
   "continue_text": "جاری رہے",
   "contract_address": "معاہدہ کا پتہ",
