--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Thay đổi cặp đã chọn",
   "change_wallet_alert_content": "Bạn có muốn thay đổi ví hiện tại thành ${wallet_name} không?",
   "change_wallet_alert_title": "Thay đổi ví hiện tại",
+  "checking_for_alias_changes": "Kiểm tra thay đổi bí danh",
   "choose_account": "Chọn tài khoản",
   "choose_address": "\n\nVui lòng chọn địa chỉ:",
   "choose_card_value": "Chọn giá trị thẻ",
@@ -196,10 +197,12 @@
   "connection_sync": "Kết nối và đồng bộ hóa",
   "connectWalletPrompt": "Kết nối ví của bạn với WalletConnect để thực hiện giao dịch",
   "contact": "Liên hệ",
+  "contact no longer has an address assigne": "Liên hệ này không còn có một địa chỉ được chỉ định. Vui lòng chọn một liên hệ khác hoặc nhập một địa chỉ theo cách thủ công. (Tiền tệ: )",
   "contact_list_contacts": "Danh bạ",
   "contact_list_wallets": "Ví của tôi",
   "contact_name": "Tên liên hệ",
   "contact_name_exists": "Một liên hệ với cái tên đó đã tồn tại. Vui lòng chọn một tên khác.",
+  "contact_no_longer_has_an_address_assigne": "Liên hệ này không còn có một địa chỉ được chỉ định. Vui lòng chọn một liên hệ khác hoặc nhập một địa chỉ theo cách thủ công.",
   "contact_support": "Liên hệ Hỗ trợ",
   "continue_text": "Tiếp tục",
   "contract_address": "Địa chỉ hợp đồng",
