--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "Yi bata ti a yan",
   "change_wallet_alert_content": "Ṣe ẹ fẹ́ pààrọ̀ àpamọ́wọ́ yìí sí ${wallet_name}?",
   "change_wallet_alert_title": "Ẹ pààrọ̀ àpamọ́wọ́ yìí",
+  "checking_for_alias_changes": "Ṣiṣayẹwo fun awọn ayipada inagijẹ",
   "choose_a_payment_method": "Yan ọna isanwo kan",
   "choose_a_provider": "Yan olupese",
   "choose_account": "Yan àkáǹtì",
@@ -197,10 +198,12 @@
   "connection_sync": "Ìkànpọ̀ àti ìbádọ́gba",
   "connectWalletPrompt": "So apamọwọ rẹ pọ pẹlu WalletConnect lati ṣe awọn iṣowo",
   "contact": "Olùbásọ̀rọ̀",
+  "contact no longer has an address assigne": "Olubasọrọ yii ko si ni adirẹsi ti a yan. Jọwọ yan olubasọrọ ti o yatọ tabi tẹ adirẹsi kan pẹlu ọwọ. (Owo:))",
   "contact_list_contacts": "Àwọn olùbásọ̀rọ̀",
   "contact_list_wallets": "Àwọn àpamọ́wọ́ mi",
   "contact_name": "Orúkọ olùbásọ̀rọ̀",
   "contact_name_exists": "Olubasọrọ pẹlu orukọ yẹn ti wa tẹlẹ. Jọwọ yan orukọ ti o yatọ.",
+  "contact_no_longer_has_an_address_assigne": "Olubasọrọ yii ko si ni adirẹsi ti a yan. Jọwọ yan olubasọrọ ti o yatọ tabi tẹ adirẹsi kan pẹlu ọwọ.",
   "contact_support": "Bá ìranlọ́wọ́ sọ̀rọ̀",
   "continue_text": "Tẹ̀síwájú",
   "contract_address": "Adirẹsi adehun",
