Revert "localize contact refresh page strings"

--- a/res/values/strings_th.arb
+++ b/res/values/strings_th.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "เปลี่ยนคู่ที่เลือก",
   "change_wallet_alert_content": "คุณต้องการเปลี่ยนกระเป๋าปัจจุบันเป็น ${wallet_name} หรือไม่?",
   "change_wallet_alert_title": "เปลี่ยนกระเป๋าปัจจุบัน",
+  "checking_for_alias_changes": "การตรวจสอบการเปลี่ยนแปลงนามแฝง",
   "choose_a_payment_method": "เลือกวิธีการชำระเงิน",
   "choose_a_provider": "เลือกผู้ให้บริการ",
   "choose_account": "เลือกบัญชี",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "กระเป๋าเงินของฉัน",
   "contact_name": "ชื่อผู้ติดต่อ",
   "contact_name_exists": "มีผู้ติดต่อชื่อนั้นอยู่แล้ว โปรดเลือกชื่ออื่น",
+  "contact_no_longer_has_an_address_assigne": "ผู้ติดต่อนี้ไม่ได้กำหนดที่อยู่อีกต่อไป โปรดเลือกผู้ติดต่ออื่นหรือป้อนที่อยู่ด้วยตนเอง",
   "contact_support": "ติดต่อฝ่ายสนับสนุน",
   "continue_text": "ดำเนินการต่อ",
   "contract_address": "ที่อยู่สัญญา",
