--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -149,6 +149,7 @@
   "change_selected_pair": "更改选定对",
   "change_wallet_alert_content": "您是否想将当前钱包改为 ${wallet_name}?",
   "change_wallet_alert_title": "更换当前钱包",
+  "checking_for_alias_changes": "检查别名更改",
   "choose_a_payment_method": "选择付款方式",
   "choose_a_provider": "选择一个提供商",
   "choose_account": "选择账户",
@@ -201,6 +202,7 @@
   "contact_list_wallets": "我的钱包",
   "contact_name": "联系人姓名",
   "contact_name_exists": "已存在具有该名称的联系人。请选择不同的名称。",
+  "contact_no_longer_has_an_address_assigne": "此联系人不再分配地址。请选择其他联系人或手动输入地址。",
   "contact_support": "联系支持",
   "continue_text": "继续",
   "contract_address": "合同地址",
