feat: Add new accent color themes and update theme selection UI
- Enhanced theme selection UI in display settings to support accent color choices.
- Updated theme handling logic to accommodate new accent color variants.

--- a/res/values/strings_ar.arb
+++ b/res/values/strings_ar.arb
@@ -55,6 +55,7 @@
   "and": "و",
   "anonpay_description": "توليد ${type}. يمكن للمستلم ${method} بأي عملة مشفرة مدعومة ، وستتلقى أموالاً في هذه",
   "apk_update": "تحديث APK",
+  "appearance": "مظهر",
   "approve": "ﺪﻤﺘﻌﻳ",
   "approve_request": "الموافقة على الطلب",
   "approve_tokens": "الموافقة على الرموز",
