--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -55,6 +55,7 @@
   "and": "и",
   "anonpay_description": "Генерирайте ${type}. Получателят може да ${method} с всяка поддържана криптовалута и вие ще получите средства в този портфейл.",
   "apk_update": "APK ъпдейт",
+  "appearance": "Външен вид",
   "approve": "Одобряване",
   "approve_request": "Одобрете искане",
   "approve_tokens": "Одобрете жетоните",
