--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -55,6 +55,7 @@
   "and": "kuma",
   "anonpay_description": "Ƙirƙirar ${type}. Maƙiyantun mai nasara zai iya ${method} da duk abubuwan da ke samun lambar waya, kuma zaku samu kuɗin dama a wannan kashi.",
   "apk_update": "apk sabunta",
+  "appearance": "Bayyanawa",
   "approve": "Amincewa",
   "approve_request": "Amince da bukata",
   "approve_tokens": "Amince da Alamu",
