--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -55,6 +55,7 @@
   "and": "और",
   "anonpay_description": "${type} उत्पन्न करें। प्राप्तकर्ता किसी भी समर्थित क्रिप्टोकरेंसी के साथ ${method} कर सकता है, और आपको इस वॉलेट में धन प्राप्त होगा।",
   "apk_update": "APK अद्यतन",
+  "appearance": "उपस्थिति",
   "approve": "मंज़ूरी देना",
   "approve_request": "अनुरोध को स्वीकृत करें",
   "approve_tokens": "टोकन को मंजूरी देना",
