--- a/res/values/strings_hy.arb
+++ b/res/values/strings_hy.arb
@@ -55,6 +55,7 @@
   "and": "և",
   "anonpay_description": "${type} ստեղծել: Ստացողը կարող է ${method} ցանկացած աջակցվող կրիպտոարժույթով, և դուք կստանաք միջոցներ այս դրամապանակում։",
   "apk_update": "APK թարմացում",
+  "appearance": "Արտաքին տեսք",
   "approve": "Հաստատել",
   "approve_request": "Հաստատում է հայցը",
   "approve_tokens": "Հաստատում է նշանները",
