--- a/res/values/strings_my.arb
+++ b/res/values/strings_my.arb
@@ -55,6 +55,7 @@
   "and": "နှင့်",
   "anonpay_description": "${type} ကို ဖန်တီးပါ။ လက်ခံသူက ${method} ကို ပံ့ပိုးပေးထားသည့် cryptocurrency တစ်ခုခုဖြင့် လုပ်ဆောင်နိုင်ပြီး၊ သင်သည် ဤပိုက်ဆံအိတ်တွင် ရံပုံငွေများ ရရှိမည်ဖြစ်သည်။",
   "apk_update": "APK အပ်ဒိတ်",
+  "appearance": "ဖြစ်ပေါ်လာခြင်း",
   "approve": "လက်မခံပါ။",
   "approve_request": "တောင်းဆိုမှုကိုအတည်ပြု",
   "approve_tokens": "တိုကင်အတည်ပြု",
