--- a/res/values/strings_ru.arb
+++ b/res/values/strings_ru.arb
@@ -55,6 +55,7 @@
   "and": "и",
   "anonpay_description": "Создайте ${type}. Получатель может использовать ${method} с любой поддерживаемой криптовалютой, и вы получите средства на этот кошелек.",
   "apk_update": "Обновление APK",
+  "appearance": "Появление",
   "approve": "Утвердить",
   "approve_request": "Утвердить запрос",
   "approve_tokens": "Одобрить токены",
