--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -55,6 +55,7 @@
   "and": "at",
   "anonpay_description": "Bumuo ng ${type}. Ang tatanggap ay maaaring ${method} na may anumang suportadong cryptocurrency, at makakatanggap ka ng mga pondo sa wallet na ito.",
   "apk_update": "APK update",
+  "appearance": "Hitsura",
   "approve": "Aprubahan",
   "approve_request": "Aprubahan ang kahilingan",
   "approve_tokens": "Aprubahan ang mga token",
