--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -55,6 +55,7 @@
   "and": "і",
   "anonpay_description": "Згенерувати ${type}. Одержувач може ${method} будь-якою підтримуваною криптовалютою, і ви отримаєте кошти на цей гаманець.",
   "apk_update": "Оновлення APK",
+  "appearance": "Зовнішність",
   "approve": "Затвердити",
   "approve_request": "Запитайте запит",
   "approve_tokens": "Затвердити токени",
