--- a/res/values/strings_ur.arb
+++ b/res/values/strings_ur.arb
@@ -55,6 +55,7 @@
   "and": "اور",
   "anonpay_description": "${type} بنائیں۔ وصول کنندہ کسی بھی تعاون یافتہ کرپٹو کرنسی کے ساتھ ${method} کرسکتا ہے، اور آپ کو اس بٹوے میں فنڈز موصول ہوں گے۔",
   "apk_update": "APK اپ ڈیٹ",
+  "appearance": "ظاہری شکل",
   "approve": "ﻭﺮﮐ ﺭﻮﻈﻨﻣ",
   "approve_request": "درخواست کو منظور کریں",
   "approve_tokens": "ٹوکن کو منظور کریں",
