--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -55,6 +55,7 @@
   "and": "àti",
   "anonpay_description": "Ṣe akọkọ ${type}. Awọn alabara le ${method} pẹlu eyikeyi iwo ise ati owo yoo wọle si iwe iwe yii.",
   "apk_update": "Àtúnse áàpù títun wà",
+  "appearance": "Ifarahan",
   "approve": "Fi ọwọ si",
   "approve_request": "IKILỌ RẸ",
   "approve_tokens": "Ṣe fọwọsi awọn àmi",
