CW-1206-refactor-hardware-wallets-code (#2507)
* feat: add support for new hardware wallet types (Cupcake, Coldcard, SeedSigner) and improve QR Code handling

- Introduced new hardware wallet types (Cupcake, Coldcard, SeedSigner) with corresponding assets and localization updates.
- Updated QR Code format selection for hardware wallets with new formats (BCUR, BBQR) specific to devices.
- Improved hardware wallet restoration flow to include airgapped wallet handling via QR Code scanning.
- Refactored routing, view models, and dependency injection to accommodate new hardware wallet types.
- Enhanced UI for device manufacturer selection and QR Code format dialogs.

* feat: update hardware wallet assets and restoration flow

* feat: add changing airgapped wallet type

* feat: add Cupcake Man SVG asset to hardware wallet resources

* refactor: update Litecoin receive options to require wallet parameter and handle hardware wallets

* fix: debugging keystone integration
feat: support for zpub view only restore

* fix: seed signer restore

* fix: disable bitbox restoring (for now) [skip-ci]

* refactor: rename `isCupcake` to `isBitcoinViewOnly` for clarity [skip ci]

---------

Co-authored-by: Czarek Nakamoto <cyjan@mrcyjanek.net>
Co-authored-by: Omar Hatem <omarh.ismail1@gmail.com>

--- a/res/values/strings_de.arb
+++ b/res/values/strings_de.arb
@@ -158,7 +158,7 @@
   "choose_from_available_options": "Wähle aus verfügbaren Optionen:",
   "choose_one": "Wähle ein",
   "choose_qr_code_format": "Wählen Sie das QR-Code-Format",
-  "choose_qr_code_format_note": "Wählen Sie das richtige Format für Ihre Hardware-Wallet:",
+  "choose_qr_code_format_note": "Wählen Sie das richtige Format für Ihr Hardware-Wallet:",
   "choose_relay": "Bitte wählen Sie ein zu verwendendes Relais aus",
   "choose_wallet_currency": "Bitte wählen Sie die Währung der Wallet:",
   "choose_wallet_group": "Wählen Sie Walletgruppe",
@@ -194,7 +194,7 @@
   "connect_yats": "Yats verbinden",
   "connect_your_hardware_wallet": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth oder USB",
   "connect_your_hardware_wallet_ble": "Verbinden Sie Ihre Hardware-Wallet über Bluetooth",
-  "connect_your_hardware_wallet_usb": "Schließen Sie Ihre Hardware -Brieftasche mit USB an",
+  "connect_your_hardware_wallet_usb": "Schließen Sie Ihre Hardware-Wallet mit USB an",
   "connected": "Verbunden",
   "connection_sync": "Verbindung und Synchronisierung",
   "connectWalletPrompt": "Verbinden Sie Ihr Wallet mit WalletConnect, um Transaktionen durchzuführen",
@@ -356,7 +356,7 @@
   "error_while_processing": "Ein Fehler beim Proceessing trat ein Fehler auf",
   "errorGettingCredentials": "Fehlgeschlagen: Fehler beim Abrufen der Anmeldeinformationen",
   "errorSigningTransaction": "Beim Signieren der Transaktion ist ein Fehler aufgetreten",
-  "establishing_tor_connection": "Einstellung der TOR-Verbindung",
+  "establishing_tor_connection": "Einstellung der Tor-Verbindung",
   "estimated": "Geschätzt",
   "estimated_new_fee": "Geschätzte neue Gebühr",
   "estimated_receive_amount": "Geschätzter Empfangsbetrag",
@@ -648,8 +648,8 @@
   "purchase_gift_card": "Geschenkkarte kaufen",
   "purple_dark_theme": "Lila dunkle Thema",
   "qr_code_format": "QR-Codeformat",
-  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) ist der Branchenstandard und am weitesten verbreitet mit Bitcoin-Hardware-Wallet und sollte von den meisten Benutzern ausgewählt werden. BBQR (Better Bitcoin QR) ist ein einzigartiges Format, das nur von Coldcard-Hardware-Wallet verwendet wird, beginnend mit ihrem Modell Q.",
-  "qr_code_format_note": "Unterschiedliche QR-Codeformate werden von verschiedenen Hardware-Wallet im Bitcoin-Bereich verwendet",
+  "qr_code_format_body": "BCUR (Blockchain Commons Uniform Resources) ist der Branchenstandard und am weitesten verbreitet mit Bitcoin-Hardware-Wallets und sollte von den meisten Benutzern ausgewählt werden. BBQR (Better Bitcoin QR) ist ein einzigartiges Format, das nur von Coldcard-Hardware-Wallets verwendet wird, beginnend mit ihrem Modell Q.",
+  "qr_code_format_note": "Unterschiedliche QR-Codeformate werden von verschiedenen Hardware-Wallets im Bitcoin-Bereich verwendet",
   "qr_fullscreen": "Tippen Sie hier, um den QR-Code im Vollbildmodus zu öffnen",
   "qr_instruction": "Verwenden Sie diese Adresse, um ein Token oder ein Sammlerstück zu erhalten",
   "qr_payment_amount": "This QR code contains a payment amount. Do you want to overwrite the current value?",
@@ -897,7 +897,7 @@
   "sort_by": "Sortiere nach",
   "spend_key_private": "Spend Key (geheim)",
   "spend_key_public": "Spend Key (öffentlich)",
-  "starting_tor_proxy": "TOR-Proxy beginnen",
+  "starting_tor_proxy": "Tor-Proxy beginnen",
   "status": "Status: ",
   "step": "Schritt",
   "string_default": "Standard",
