feat: Add 'basescan_history' string localization

--- a/res/values/strings_bg.arb
+++ b/res/values/strings_bg.arb
@@ -86,6 +86,7 @@
   "backup_password": "Парола за възстановяване",
   "balance": "Баланс",
   "balance_page": "Страница за баланс",
+  "basescan_history": "История на басескан",
   "bill_amount": "Искана сума",
   "billing_address_info": "Ако Ви попитат за билинг адрес, въведето своя адрес за доставка",
   "biometric_auth_reason": "Сканирайте своя пръстов отпечатък",
