--- a/res/values/strings_hi.arb
+++ b/res/values/strings_hi.arb
@@ -86,6 +86,7 @@
   "backup_password": "बैकअप पासवर्ड",
   "balance": "संतुलन",
   "balance_page": "बैलेंस पेज",
+  "basescan_history": "बेसस्कैन इतिहास",
   "bill_amount": "बिल राशि",
   "billing_address_info": "यदि बिलिंग पता मांगा जाए, तो अपना शिपिंग पता प्रदान करें",
   "biometric_auth_reason": "प्रमाणित करने के लिए अपने फ़िंगरप्रिंट को स्कैन करें",
