--- a/res/values/strings_id.arb
+++ b/res/values/strings_id.arb
@@ -86,6 +86,7 @@
   "backup_password": "Kata sandi cadangan",
   "balance": "Keseimbangan",
   "balance_page": "Halaman Saldo",
+  "basescan_history": "Sejarah Basescan",
   "bill_amount": "Jumlah Tagihan",
   "billing_address_info": "Jika diminta alamat billing, berikan alamat pengiriman Anda",
   "biometric_auth_reason": "Pindai sidik jari Anda untuk mengautentikasi",
