--- a/res/values/strings_pt.arb
+++ b/res/values/strings_pt.arb
@@ -86,6 +86,7 @@
   "backup_password": "Senha de backup",
   "balance": "Equilíbrio",
   "balance_page": "Página de saldo",
+  "basescan_history": "História de Basescan",
   "bill_amount": "Valor da conta",
   "billing_address_info": "Se for solicitado um endereço de cobrança, forneça seu endereço de entrega",
   "biometric_auth_reason": "Digitalize sua impressão digital para autenticar",
