--- a/res/values/strings_tl.arb
+++ b/res/values/strings_tl.arb
@@ -86,6 +86,7 @@
   "backup_password": "Backup na password",
   "balance": "Balanse",
   "balance_page": "Pahina ng Balanse",
+  "basescan_history": "Kasaysayan ng Basescan",
   "bill_amount": "Halaga ng Bill",
   "billing_address_info": "Kung humihingi ng billing address, ibigay ang iyong shipping address",
   "biometric_auth_reason": "I-scan ang iyong fingerprint para ma-authenticate",
