--- a/res/values/strings_uk.arb
+++ b/res/values/strings_uk.arb
@@ -86,6 +86,7 @@
   "backup_password": "Пароль резервної копії",
   "balance": "Балансувати",
   "balance_page": "Сторінка балансу",
+  "basescan_history": "Базесканська історія",
   "bill_amount": "Сума рахунку",
   "billing_address_info": "Якщо буде запропоновано платіжну адресу, вкажіть свою адресу доставки",
   "biometric_auth_reason": "Відскануйте свій відбиток пальця для аутентифікації",
