--- a/res/values/strings_yo.arb
+++ b/res/values/strings_yo.arb
@@ -86,6 +86,7 @@
   "backup_password": "Ṣẹ̀dà ọ̀rọ̀ aṣínà",
   "balance": "Iwọntunwọnsi",
   "balance_page": "Oju-iwe iwọntunwọnsi",
+  "basescan_history": "Itan Basiki",
   "bill_amount": "Iye ìwé owó",
   "billing_address_info": "Tí ọlọ́jà bá bèèrè àdírẹ́sì sísan yín, fún òun ni àdírẹ́sì t'á ránṣẹ́ káàdì yìí sí",
   "biometric_auth_reason": "Ya ìka ọwọ́ yín láti ṣe ìfẹ̀rílàdí",
