--- a/res/values/strings_zh.arb
+++ b/res/values/strings_zh.arb
@@ -86,6 +86,7 @@
   "backup_password": "备份密码",
   "balance": "平衡",
   "balance_page": "余额页",
+  "basescan_history": "Basescan历史",
   "bill_amount": "账单金额",
   "billing_address_info": "如果要求提供帐单地址，请提供您的送货地址",
   "biometric_auth_reason": "扫描指纹进行身份认证",
