--- a/res/values/strings_ha.arb
+++ b/res/values/strings_ha.arb
@@ -86,6 +86,7 @@
   "backup_password": "Ajiyayyen kalmar sirri",
   "balance": "Ma'auni",
   "balance_page": "Ma'auni Page",
+  "basescan_history": "Tarihin Basescan",
   "bill_amount": "Adadin Bill",
   "billing_address_info": "Idan an nemi adireshin biyan kuɗi, samar da adireshin jigilar kaya",
   "biometric_auth_reason": "Duba hoton yatsa don tantancewa",
