--- a/res/values/strings_vi.arb
+++ b/res/values/strings_vi.arb
@@ -86,6 +86,7 @@
   "backup_password": "Mật khẩu sao lưu",
   "balance": "Số dư",
   "balance_page": "Trang số dư",
+  "basescan_history": "Lịch sử Basescan",
   "bill_amount": "Số tiền hóa đơn",
   "billing_address_info": "Nếu được yêu cầu địa chỉ thanh toán, hãy cung cấp địa chỉ giao hàng của bạn",
   "biometric_auth_reason": "Quét vân tay để xác thực",
