--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -374,7 +374,7 @@
   "exchange_result_write_down_ID": "*Please copy or write down your ID shown above.",
   "exchange_result_write_down_trade_id": "Please copy or write down the trade ID to continue.",
   "exchange_sync_alert_content": "Please wait until your wallet is synchronized",
-  "exchange_trade_result_confirm": "By pressing send from cake wallet, you will be sending ${fetchingLabel} ${from} from your wallet called ${walletName} to the address shown below. Or you can send from your external wallet to the address/QR code on the send from external wallet details page.\n\nPlease press either of the buttons to continue or go back to change the amounts.",
+  "exchange_trade_result_confirm": "By pressing send fromake walleCake Wallett, you will be sending ${fetchingLabel} ${from} from your wallet called ${walletName} to the address shown below. Or you can send from your external wallet to the address/QR code on the send from external wallet details page.\n\nPlease press either of the buttons to continue or go back to change the amounts.",
   "expired": "Expired",
   "expires": "Expires",
   "expiresOn": "Expires on",
