--- a/res/values/strings_en.arb
+++ b/res/values/strings_en.arb
@@ -351,6 +351,7 @@
   "error_text_template": "Template name and address can't contain ` , ' \" symbols\nand must be between 1 and 106 characters long",
   "error_text_wallet_name": "Wallet name can only contain letters, numbers, _ - symbols \nand must be between 1 and 33 characters long",
   "error_text_xmr": "XMR value can't exceed available balance.\nThe number of fraction digits must be less or equal to 12",
+  "error_text_failed_to_resotre_from_keystone_private_mode": "Failed to restore from Keystone private mode",
   "error_while_processing": "An error occurred while proceessing",
   "errorGettingCredentials": "Failed: Error while getting credentials",
   "errorSigningTransaction": "An error has occured while signing transaction",
@@ -702,6 +703,8 @@
   "restore_description_from_backup": "You can restore the whole Cake Wallet app from your back-up file",
   "restore_description_from_cupcake": "Link with our companion air-gapped app, installed on a second phone.",
   "restore_description_from_hardware_wallet": "Restore from a Ledger hardware wallet",
+  "restore_from_private_mode_title": "Enter PIN to Unlock QR",
+  "restore_description_from_keystone": "Restore from a Keystone hardware wallet",
   "restore_description_from_keys": "Restore your wallet from generated keystrokes saved from your private keys",
   "restore_description_from_seed": "Restore your wallet from either the 25 word or 13 word combination code",
   "restore_description_from_seed_keys": "Get back your wallet from seed/keys that you've saved to secure place",
@@ -717,6 +720,7 @@
   "restore_title_from_backup": "Restore from backup",
   "restore_title_from_cupcake": "Cupcake App",
   "restore_title_from_hardware_wallet": "Restore from hardware wallet",
+  "restore_title_from_keystone": "Restore from Keystone",
   "restore_title_from_keys": "Restore from keys",
   "restore_title_from_seed": "Restore from seed",
   "restore_title_from_seed_keys": "Restore from seed/keys",
